salesforce/force-app/main/default/objects/RY_Programme_Offering__c/RY_Programme_Offering__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Proposed Red and Yellow demonstration model; not verified against an existing org.</description><enableReports>true</enableReports><label>RY Programme Offering</label><nameField><displayFormat>RY-{000000}</displayFormat><label>Programme Offering Number</label><type>AutoNumber</type></nameField><pluralLabel>RY Programme Offering Records</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>