salesforce/force-app/main/default/objects/RY_Programme_Offering__c/fields/Advertised_Fee_ZAR__c.field-meta.xml
<CustomField><fullName>Advertised_Fee_ZAR__c</fullName><label>Advertised Fee ZAR</label><precision>18</precision><required>false</required><scale>2</scale><type>Number</type></CustomField>