salesforce/force-app/main/default/objects/RY_Programme_Offering__c/fields/Catalogue_Section__c.field-meta.xml
<CustomField><fullName>Catalogue_Section__c</fullName><label>Catalogue Section</label><length>255</length><required>false</required><type>Text</type></CustomField>