salesforce/force-app/main/default/objects/RY_Programme_Offering__c/fields/Delivery_Mode__c.field-meta.xml
<CustomField><fullName>Delivery_Mode__c</fullName><label>Delivery Mode</label><length>255</length><required>false</required><type>Text</type></CustomField>