salesforce/force-app/main/default/objects/RY_Programme_Offering__c/fields/Duration_Unit__c.field-meta.xml
<CustomField><fullName>Duration_Unit__c</fullName><label>Duration Unit</label><length>255</length><required>false</required><type>Text</type></CustomField>