salesforce/force-app/main/default/objects/RY_Programme_Offering__c/fields/Duration_Value__c.field-meta.xml
<CustomField><fullName>Duration_Value__c</fullName><label>Duration Value</label><precision>18</precision><required>false</required><scale>0</scale><type>Number</type></CustomField>