salesforce/force-app/main/default/objects/RY_Programme_Offering__c/fields/Notes__c.field-meta.xml
<CustomField><fullName>Notes__c</fullName><label>Notes</label><length>32768</length><type>LongTextArea</type><visibleLines>3</visibleLines></CustomField>