salesforce/force-app/main/default/objects/RY_Programme_Offering__c/fields/Observed_Date__c.field-meta.xml
<CustomField><fullName>Observed_Date__c</fullName><label>Observed Date</label><required>false</required><type>Date</type></CustomField>