salesforce/force-app/main/default/objects/RY_Programme_Offering__c/fields/Price_Status__c.field-meta.xml
<CustomField><fullName>Price_Status__c</fullName><label>Price Status</label><length>255</length><required>false</required><type>Text</type></CustomField>