salesforce/force-app/main/default/objects/RY_Programme_Offering__c/fields/Programme__c.field-meta.xml
<CustomField><fullName>Programme__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Programme</label><referenceTo>RY_Programme__c</referenceTo><relationshipLabel>Programme Records</relationshipLabel><relationshipName>RY_Programme_Offering_Programme</relationshipName><required>false</required><type>Lookup</type></CustomField>