salesforce/force-app/main/default/objects/RY_Programme_Offering__c/fields/Source_Refs__c.field-meta.xml
<CustomField><fullName>Source_Refs__c</fullName><label>Source Refs</label><length>255</length><required>false</required><type>Text</type></CustomField>