salesforce/force-app/main/default/objects/RY_Programme_Offering__c/fields/Source_URL__c.field-meta.xml
<CustomField><fullName>Source_URL__c</fullName><label>Source URL</label><required>false</required><type>Url</type></CustomField>