salesforce/force-app/main/default/objects/RY_Programme_Offering__c/fields/Study_Pace__c.field-meta.xml
<CustomField><fullName>Study_Pace__c</fullName><label>Study Pace</label><length>255</length><required>false</required><type>Text</type></CustomField>