salesforce/force-app/main/default/objects/RY_Programme_Offering__c/fields/Title__c.field-meta.xml
<CustomField><fullName>Title__c</fullName><label>Title</label><length>255</length><required>false</required><type>Text</type></CustomField>